src/objects/Slack__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace__c</fullName>
        <label>Workspace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Slack</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Slack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>